Bug 1044514 - AudioDestinationNode should not be kept alive by the event listener, r=ehsan