content/media/webaudio/AudioDestinationNode.h
@@ -17,6 +17,7 @@ namespace mozilla {
 namespace dom {
 
 class AudioContext;
+class EventProxyHandler;
 
 class AudioDestinationNode : public AudioNode
                            , public nsIDOMEventListener
@@ -57,7 +58,7 @@ public:
 
   void OfflineShutdown();
 
-  // nsIDOMEventListener
+  // nsIDOMEventListener - by proxy
   NS_IMETHOD HandleEvent(nsIDOMEvent* aEvent);
 
   AudioChannel MozAudioChannelType() const;
@@ -72,6 +73,8 @@ public:
 
   // When aIsOnlyNode is true, this is the only node for the AudioContext.
   void SetIsOnlyNodeForContext(bool aIsOnlyNode);
+
+  void CreateAudioChannelAgent();
 
   virtual const char* NodeType() const
   {
@@ -88,7 +91,6 @@ protected:
 
 private:
   bool CheckAudioChannelPermissions(AudioChannel aValue);
-  void CreateAudioChannelAgent();
 
   void SetCanPlay(bool aCanPlay);
 
@@ -99,6 +101,8 @@ private:
   uint32_t mFramesToProduce;
 
   nsCOMPtr<nsIAudioChannelAgent> mAudioChannelAgent;
+
+  nsRefPtr<EventProxyHandler> mEventProxyHelper;
 
   // Audio Channel Type.
   AudioChannel mAudioChannel;
